[project]
name = "handcode"
version = "0.4.2"
description = "Handwriting GCode Generator"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "numpy==1.26.4",
    "tensorflow==2.11.0",
    "tensorflow-intel==2.11.0",
    "tensorflow-probability==0.19.0",
    "tf-keras==2.14.1",
    "numpy==1.26.4",
]

[tool.uv]
override-dependencies = [
    "tensorflow-intel; sys_platform == 'win32'",
    "tensorflow-io-gcs-filesystem; sys_platform == 'never'",
]
