[project]
name = "handcode"
version = "0.5.0"
description = "Handwriting GCode Generator"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy==1.26.4",
    "tkmacosx",
]

[project.optional-dependencies]
recommended = [
    "handcode[torch]"
]
torch = [
    "torch==2.1.0",
]
tf = [
    "tensorflow==2.11.0",
    "tensorflow-intel==2.11.0",
    "tensorflow-probability==0.19.0",
    "tf-keras==2.14.1",
]
build = [
    "cx_Freeze==8.2",
    "lazy-loader==0.2.0",
]

[tool.uv]
override-dependencies = [
    "tkmacosx; sys_platform == 'darwin'",
    "tensorflow-intel; sys_platform == 'win32'",
    "tensorflow-io-gcs-filesystem; sys_platform == 'never'",
]
